test/errors/scope-resolution/fullImportPath.compopts
--detailed-errors # fullImportPath-detailed.good
--no-detailed-errors # fullImportPath-brief.good
